--- a/blog4/app/assets/stylesheets/scaffolds.scss
+++ b/blog4/app/assets/stylesheets/scaffolds.scss
@@ -43,7 +43,7 @@ div.actions {
 
 #error_explanation {
   width: 450px;
-  border: 2px solid blue;
+  border: 2px solid red;
   padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0; }
@@ -54,7 +54,7 @@ div.actions {
   padding: 5px 5px 5px 15px;
   font-size: 12px;
   margin: -7px -7px 0;
-  background-color: blue;
+  background-color: #c00;
   color: #fff; }
 
 #error_explanation ul li {
